[gd_scene load_steps=17 format=3 uid="uid://d038aa4nuh0dq"]

[ext_resource type="Script" path="res://EnemyBoss/EnemyBoss.gd" id="1_200bp"]
[ext_resource type="Texture2D" uid="uid://dmprlguicdvnq" path="res://EnemyBoss/boss_movements.png" id="2_f73il"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spikd"]
size = Vector2(26, 65)

[sub_resource type="Animation" id="Animation_3nca2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_jx8cb"]
resource_name = "idle"
length = 0.95
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(2, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0)]
}

[sub_resource type="Animation" id="Animation_0n5di"]
resource_name = "idle_shot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="Animation" id="Animation_1b41r"]
resource_name = "punch"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PunchArea2D/Colision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_imoi8"]
resource_name = "shot_gun_run"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4)]
}

[sub_resource type="Animation" id="Animation_k7no5"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="Animation" id="Animation_j1382"]
resource_name = "walk_gun"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_krh22"]
_data = {
"RESET": SubResource("Animation_3nca2"),
"idle": SubResource("Animation_jx8cb"),
"idle_shot": SubResource("Animation_0n5di"),
"punch": SubResource("Animation_1b41r"),
"shot_gun_run": SubResource("Animation_imoi8"),
"walk": SubResource("Animation_k7no5"),
"walk_gun": SubResource("Animation_j1382")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j0hxh"]
size = Vector2(25, 42.75)

[sub_resource type="Gradient" id="Gradient_vy2rd"]
colors = PackedColorArray(0, 0, 0, 0.796078, 0, 0, 0, 0.796078)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1w3xr"]
gradient = SubResource("Gradient_vy2rd")

[sub_resource type="Gradient" id="Gradient_nfa4m"]
colors = PackedColorArray(0, 0.45098, 0.227451, 1, 0, 0.45098, 0.227451, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rtw4g"]
gradient = SubResource("Gradient_nfa4m")

[node name="EnemyBoss" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_200bp")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.65098, 0.0901961, 0.211765, 1)
self_modulate = Color(0.670588, 0.364706, 0.211765, 1)
texture_filter = 1
position = Vector2(-8.5, -19)
scale = Vector2(1.281, 2.188)
texture = ExtResource("2_f73il")
hframes = 10
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, -16)
shape = SubResource("RectangleShape2D_spikd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_krh22")
}

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-9.88372, -26)

[node name="RayCast2D2H" type="RayCast2D" parent="."]
position = Vector2(-10, 16)
rotation = -1.57079
target_position = Vector2(0.000150681, 24)

[node name="EnemyArea2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyArea2D"]
position = Vector2(-9, -16)
shape = SubResource("RectangleShape2D_spikd")

[node name="AttackArea2D" type="Area2D" parent="." groups=["attack_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
position = Vector2(-0.500009, -17)
rotation = -3.14159
scale = Vector2(1, -0.421053)
shape = SubResource("RectangleShape2D_j0hxh")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -40.0
offset_top = -64.0
offset_right = 24.0
scale = Vector2(1.08, 0.119726)
value = 100.0
rounded = true
texture_under = SubResource("GradientTexture2D_1w3xr")
texture_progress = SubResource("GradientTexture2D_rtw4g")

[connection signal="area_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_area_entered"]
